[workspace]

[package]
name = "price-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "price-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
switchboard-solana = { version = "=0.29.71", features = ["macros"] }
bytemuck = "1.13"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = "0.11.27"
